# Embedded_Devops

./: README.md
embedded-os-k8s-orchestrator/: README.md  build_all.sh  deploy_all.sh
embedded-os-k8s-orchestrator/.github/workflows/: ci.yml
embedded-os-k8s-orchestrator/apps/freertos_app/: BUILD.bazel  CMakeLists.txt  Makefile  main.c
embedded-os-k8s-orchestrator/apps/mbed_app/: BUILD.bazel  CMakeLists.txt  Makefile  main.cpp
embedded-os-k8s-orchestrator/apps/zephyr_app/: BUILD.bazel  CMakeLists.txt  Makefile  main.c
embedded-os-k8s-orchestrator/docker/: Dockerfile.freertos  Dockerfile.mbed  Dockerfile.zephyr
embedded-os-k8s-orchestrator/k8s/: freertos-deployment.yaml  mbed-deployment.yaml  zephyr-deployment.yaml
